Remove flexbox fix for #contact overflow, add simpler fix

--- a/main.scss
+++ b/main.scss
@@ -265,19 +265,12 @@ section {
 
 #contact {
 	> div {
-		display: flex;
-		// Extra margin for section, doesn't fold out fully & not sure why
-		margin-top: calc(var(--section-padding) - 9px);
-		@media(max-width: 500px) {
-			flex-wrap: wrap;
-			margin-top: 0;
-		}
-		> div {
-			// Shift text wrapper right
-			margin-left: 1rem;
-			margin-right: -1rem;
-			@media(max-width: 500px) {
-				margin: 0;
+		padding-bottom: 5rem;
+		p:first-of-type {
+			@media(max-width: 500px){
+				// Stop hyphen, push para down a bit on small screens
+				hyphens: unset;
+				margin-top: 7rem;
 			}
 		}
 	}
